[tool.poetry]
name = "learninglog"
version = "0.1.0"
description = ""
authors = ["Cassius"]
package-mode = false  # se não quiser empacotar o projeto

[tool.poetry.dependencies]
python = ">=3.12"
django = ">=5.2,<6.0"
django-bootstrap5 = "^25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


